# plugin-orchestrator

./: .env  Cargo.toml  Dockerfile  README.md
src/: main.rs  models.rs  orchestrator.rs  registry.rs
src/plugins/: echo.rs  mod.rs  time.rs
