[package]
name = "plugin-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Michael Alexander Montoya <montoyamichael973@gmail.com>"]
description = "A secure plugin orchestration engine with scoped execution, inspired by OpenAI, Palantir, and Anduril mission principles."
license = "MIT"

[dependencies]
# Web framework
axum = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait for plugin execution
async-trait = "0.1.77"

# Tracing and logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time formatting
chrono = { version = "0.4", features = ["serde"] }

# Environment variable loading
dotenv = "0.15"

# Async extensions like `.catch_unwind()` for plugin safety
futures = "0.3"
